--- a/style/poketemplates.css
+++ b/style/poketemplates.css
@@ -6,6 +6,7 @@
     margin: 4px;
     font-family: "Space Grotesk", sans-serif;
     cursor: pointer;
+    max-width: 168px;
 }
 
 .pokemon-img-small {
@@ -139,6 +140,32 @@
     margin-top: 12px;
     display: flex;
     flex-direction: column;
+    gap: 8px;
+}
+
+.dialog-caption-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.dialog-caption-section button {
+    background-color: rgb(64, 53, 95);
+    font-size: 24px;
+    border: solid;
+    border-color: rgb(144, 55, 168);
+    border-radius: 12px;
+    color: white;
+    padding: 2px 6px;
+    cursor: pointer;
+}
+
+.dialog-caption-section button:hover {
+    background-color: rgb(140, 94, 153);
+}
+
+.dialog-button-section {
+    display: flex;
     gap: 8px;
 }
 
